trunk/Archive2/5b/c521933cde5e31/output
main.cpp: In function 'void mutate(char*, int, float)':
main.cpp:36:19: error: too many arguments to function 'long int random()'
       if (random(1) < mutationRate) {
                   ^
In file included from main.cpp:3:0:
/usr/include/stdlib.h:327:17: note: declared here
 extern long int random (void) __THROW;
                 ^
main.cpp: In function 'int main(int, char**)':
main.cpp:44:12: warning: unused variable 'population' [-Wunused-variable]
     char **population; //include every parent that is about to have childen
            ^
